--- a/style.css
+++ b/style.css
@@ -1,12 +1,14 @@
 table,th,td {
         border: 1px solid black;
         border-collapse: collapse;
+        text-align: center;
     }
 
     .table {
         width: 50%;
         margin-left: auto;
         margin-right: auto;
+        margin: auto;
     }
 
     .button {
